tests/failure/not_impl.stderr
error: expected `impl`
 --> $DIR/not_impl.rs:4:1
  |
4 | struct NotTrait {
  | ^^^^^^
