tests/failure/not_impl.rs
use symm_impl::symmetric;

#[symmetric]
struct NotTrait {
    a: i32,
}

fn main() {}
